# aspartition

./: .gitignore  LICENSE  README.md  graph_partition.lp  pyproject.toml
.tmp/: clingo_input.lp  clingo_output.txt
aspartition/: __init__.py
examples/: simple_graph.py
