[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aspartition"
version = "0.0.1"
authors = [
    {name = "Nathaniel Tornow", email = "nathaniel.tornow@tum.de"},
]
description = "ASP graph partitioning"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "networkx",
]